# django-shop-server

./: .gitignore  .pdm-python  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
orders_app/: tests.py  urls.py
orders_app/static/css/: style.css
orders_app/templates/: about.html  home.html  pagination.html
orders_app/templates/items/: item_detail.html
orders_app/templates/orders/: order_detail.html  order_form.html  order_list.html
orders_rest_app/: apps.py  serializers.py  tests.py
shop_server/: .env.default  Dockerfile  docker-compose.yml  manage.py  requirements.txt  run.sh  settings.py  urls.py
shop_server/orders_app/: admin.py  forms.py  models.py  urls.py  views.py
shop_server/orders_app/templates/: about.html  home.html  index.html
shop_server/orders_app/templates/items/: item_confirm_delete.html  item_detail.html  item_form.html  item_list.html
shop_server/orders_app/templates/orders/: order_confirm_delete.html  order_detail.html  order_form.html  order_list.html
shop_server/orders_rest_app/: serializers.py  urls.py  views.py
shop_server/shop_server/: asgi.py  settings.py  urls.py  wsgi.py
