[project]
name = "shop_server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vladislav Feoktistov", email = "feoktistov@ispras.ru"},
]
dependencies = [
    "django>=5.1.2",
    "djangorestframework>=3.15.2",
    "python-decouple>=3.8",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.1",
    "isort>=5.13.2",
]
